test/Debug/Errors/UnparenthesisIf.k.proof
 - (error) (UnparenthesisIf.k:4) if statement expects ()
 - RuntimeScriptException: (error) (UnparenthesisIf.k:4) if statement expects ()
Q.E.D.
